my services section element alignment bug fixed

--- a/styles/extre-small-screen-styles.css
+++ b/styles/extre-small-screen-styles.css
@@ -151,47 +151,59 @@
         width: 100vw;
         height: calc(100vh - 80px);
         background-color: var(--bg-lightgrey);
-        padding: 10px 10px;
+        padding: 10px;
     }
     .service-section-content-holder {
-        width: 100%;
+        width: calc(100vw - 20px);
         height: 100%;
-        padding: 10px 10px;
-        display: grid;
-        grid-template: 1fr / 1fr;
+        padding: 10px;
+        row-gap: 10px;
+        display: flex;
+        flex-direction: column;
     }
     .my-services-text-container {
+        width: 100%;
+        height: 60%;
         padding: 10px;
         display: grid;
         grid-template:  repeat(6, auto) / 1fr;
     }
     .my-image-container {
-        display: none;
+        width: 100%;
+        height: 40%;
+        padding: 10px;
+        display: flex;
         align-items: center;
-        justify-content: flex-end;
-        padding: 100px 0 100px 100px;
-
+        justify-content: center;
     }
     .service-heading-text {
-        font-size: 12px;
+        font-size: 18px;
         color: var(--primary-color);
         font-weight: 400;
-        display: block;
-        margin-bottom: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     .service-sub-heading-text {
         font-size: 1.8rem;
         font-weight: 900;
-        position: relative;
+        text-align: center;
         font-family: 'Libre Baskerville', serif;
         color: var(--heading-color);
     }
     .service-discription {
         font-size: 12px;
+        text-align: center;
+        color: var(--font-color);
     }
     .service-footer {
-        font-size: 11px;
-        font-weight: 400;
+        font-size: 15px;
+        font-weight: 300;
+        text-align: center;
+        
+    }
+    .service-footer a {
+        color: var(--primary-color);
     }
     .list-of-my-skills {
         display: flex;
@@ -200,7 +212,8 @@
     }
     .list-of-my-skills li {
         font-size: 11px;
-        font-weight: 500;
+        font-weight: 800;
+        letter-spacing: 0.5px;
         color:  rgba(3, 31, 81, 0.981);
     }
     .list-of-my-skills li:hover {
@@ -209,10 +222,10 @@
         cursor: pointer;
     }
     .service-section-image {
-        min-width: 250px;
-        width: 250px;
-        max-width: 250px;
-        height: 300px;
+        width: 100%;
+        max-width: 300px;
+        height: auto;
+        max-height: 300px;
         border-radius: 5px;
     }
 
